syntax = "proto3";

package go.micro.api.auth;
import "github.com/lbrulet/GoMicroservices/users/proto/users/users.proto";

service Auth {
	rpc Login(LoginRequest) returns (Response) {}
	rpc Register(RegisterRequest) returns (Response) {}
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message RegisterRequest {
	string username = 1;
	string email = 2;
	string password = 3;
}

message Response {
	go.micro.srv.users.User data = 1;
}