syntax = "proto3";

package go.micro.srv.users;

service Users {
	rpc Create(CreateRequest) returns (UserResponse) {}
	rpc Login(LoginRequest) returns (UserResponse) {}
}

message CreateRequest {
	string username = 1;
	string email = 2;
	string password = 3;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message UserResponse {
	User user = 1;
}

message User {
	int64 id = 1;
	string username = 2;
	string email = 3;
	string password = 4;
	bool isAdmin = 5;
	bool isVerified = 6;
}